--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet publish -r win-x64 -c Release --self-contained
+      run: dotnet publish -r win10-x64 -c Release /p:PublishSingleFile=true /p:PublishTrimmed=true
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1.1.1
@@ -39,6 +39,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
       with:
        upload_url:  ${{ steps.create_release.outputs.upload_url }}
-       asset_path:  ./Teleport/bin/Release/netcoreapp3.1/publish/Teleport.exe
+       asset_path:  ./Teleport/bin/Release/netcoreapp3.1/publish/win10-x64/publish/Teleport.exe
        asset_name: Teleport.exe
        asset_content_type: application
