--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -19,11 +19,11 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.101
+        dotnet-version: 5.0.100
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet publish -r win10-x64 -c Release /p:PublishSingleFile=true /p:PublishTrimmed=true
+      run: dotnet publish -c Release
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1.1.1
@@ -39,6 +39,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
       with:
        upload_url:  ${{ steps.create_release.outputs.upload_url }}
-       asset_path:  ./Teleport/bin/Release/netcoreapp3.1/win10-x64/publish/Teleport.exe
+       asset_path:  ./Teleport/bin/Release/net5.0/win-x64/publish/Teleport.exe
        asset_name: Teleport.exe
        asset_content_type: application
